fix : titles font-size on mobile

--- a/src/components/article/Article.scss
+++ b/src/components/article/Article.scss
@@ -66,6 +66,9 @@
     &-content{
         padding: 7% 7% 10% 7%;
         &-title{
+            &-h1{
+                @include title-mobile-style;
+            }
             @include title-mobile-style;
         }
 
