--- a/src/components/fournisseurs/Fournisseurs.scss
+++ b/src/components/fournisseurs/Fournisseurs.scss
@@ -92,7 +92,7 @@
 
 @media (max-width : 480px ) {
 
-    .fournisseurs__top-title{
+    .fournisseurs__top-title-h3{
         @include title-mobile-style;
     }
 
