--- a/src/components/marques/Marques.scss
+++ b/src/components/marques/Marques.scss
@@ -92,7 +92,7 @@
 
 @media (max-width : 480px ) {
 
-    .marques__top-title{
+    .marques__top-title-h3{
         @include title-mobile-style;
     }
 
